productions/agentkit-cli/archives/0.51.0/en/changelog.mdx
---
title: "Changelog"
zh_link: "/productions/agentkit-cli/archives/0.51.0/zh/changelog"
---

## 0.51.0 - 2026-08-05

- Added `config`, `build`, `launch`, `status`, and `release` for a staged lifecycle from [project configuration](/productions/agentkit-cli/archives/0.51.0/en/commands/config) through [release](/productions/agentkit-cli/archives/0.51.0/en/commands/release).
- Expanded [sandbox commands](/productions/agentkit-cli/archives/0.51.0/en/commands/sandbox) with additional tool creation, Dashboard, and terminal management.
- Fixed BytePlus VikingDB [knowledge operations](/productions/agentkit-cli/archives/0.51.0/en/commands/knowledge) and the [migration](/productions/agentkit-cli/archives/0.51.0/en/commands/migrate) upload path.

## 0.50.9 - 2026-08-03

- Added global `--provider`, the top-level [`config`](/productions/agentkit-cli/archives/0.51.0/en/commands/config) command, and region selection for init, Harness, and migration.
- Completed BytePlus project switching, MCP service mapping, build images, and [migration](/productions/agentkit-cli/archives/0.51.0/en/commands/migrate).

## 0.50.8 - 2026-07-31

- Added `deploy config --provider` for selecting the cloud provider when generating [`agentkit.yaml`](/productions/agentkit-cli/archives/0.51.0/en/agentkit-yaml).
- Switched BytePlus [deployments](/productions/agentkit-cli/archives/0.51.0/en/commands/deploy) to the corresponding base images.

## 0.50.7 - 2026-07-31

- [Frontend SSO deployment](/productions/agentkit-cli/archives/0.51.0/en/workflows/frontend-sso) can discover existing serverless gateways across projects.

## 0.50.6 - 2026-07-31

- Automatically created gateways in [Frontend SSO deployment](/productions/agentkit-cli/archives/0.51.0/en/workflows/frontend-sso) now include their network specification.

## 0.50.5 - 2026-07-31

- [Frontend SSO deployment](/productions/agentkit-cli/archives/0.51.0/en/workflows/frontend-sso) can create a serverless gateway when none is available.
- [Sandbox creation](/productions/agentkit-cli/archives/0.51.0/en/commands/sandbox#sandbox-create) added the `ArkClawEnv` and `HermesEnv` tool types.

## 0.50.4 - 2026-07-30

- Relaxed wording checks for [migration](/productions/agentkit-cli/archives/0.51.0/en/commands/migrate) plans to improve compatibility across source projects.

## 0.50.3 - 2026-07-30

- Added `sandbox attach` as an alias of `sandbox exec`; see [sandbox commands](/productions/agentkit-cli/archives/0.51.0/en/commands/sandbox#sandbox-exec).
- [Arbitrary-source migration](/productions/agentkit-cli/archives/0.51.0/en/commands/migrate) now uses the built-in source-to-veadk capability.

## 0.50.2 - 2026-07-29

- Added BytePlus resource routing to [deployment configuration](/productions/agentkit-cli/archives/0.51.0/en/agentkit-yaml), establishing the base for the complete multi-cloud deployment flow.

## 0.50.1 - 2026-07-29

- Changed Runtime defaults to 2 vCPU, 4 GiB of memory, and one minimum instance; see [`agentkit.yaml`](/productions/agentkit-cli/archives/0.51.0/en/agentkit-yaml#runtime-resources).
- Added [`migrate --project`](/productions/agentkit-cli/archives/0.51.0/en/commands/migrate) for selecting the project used by remote migration.

## 0.50.0 - 2026-07-28

- Added [Auth Admin](/productions/agentkit-cli/archives/0.51.0/en/commands/auth) credential management.
- Added Skill Space references and request-level overrides to [Harness](/productions/agentkit-cli/archives/0.51.0/en/commands/harness).
- Released the revised [sandbox commands](/productions/agentkit-cli/archives/0.51.0/en/commands/sandbox) for configuration, creation, terminal, file, and invocation workflows.

## 0.46.7 - 2026-07-22

- Added remote Dify and arbitrary-source support to [migration](/productions/agentkit-cli/archives/0.51.0/en/commands/migrate).
- Added per-resource region and project overrides plus Runtime private-network settings to [`agentkit.yaml`](/productions/agentkit-cli/archives/0.51.0/en/agentkit-yaml).

## 0.46.6 - 2026-07-19

- Published the AgentKit CLI [command reference](/productions/agentkit-cli/archives/0.51.0/en/commands) and the `agentkit.yaml`-based build and deployment documentation.
